index-docker-server

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       container_name: edu-home-webserver
       working_dir: /application
       volumes:
-          - ../front:/application
+          - ../:/application
           - ./phpdocker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       ports:
        - "8080:80"
@@ -28,6 +28,6 @@ services:
       container_name: edu-home-php-fpm
       working_dir: /application
       volumes:
-        - ../front:/application
+        - ../:/application
         - ./phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/7.4/fpm/conf.d/99-overrides.ini
 
